--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="src\style.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
         <title>_it</title>
-        <link rel="icon" href="IT-Icon-2.png">  
+        <link rel="icon" href="src\it_icon.png">  
     </head>
     <body>
-        <div class="topBar" id="topBar">
-            <div class="row">
-                <div class="col-sm">
-                    <button class="astext">Machine Learning</button>
+        <div class="container" >
+            <header class="d-flex justify-content-center py-3 topbar">
+                <div class="row">
+                    <div class="col-md-auto font-gb">
+                        <button class="btn-top">Machine Learning</button>
+                    </div>
+                    <div class="col-md-auto font-gb">
+                        <button type="button" class="btn-top">Kryptowaluty</button>
+                    </div>
+                    <div class="col-md-auto font-gb">
+                        <button type="button" class="btn-top">Internet of things</button>
+                    </div> 
                 </div>
-                <div class="col-sm">
-                    <button class="astext">Kryptowaluty</button>
-                </div>
-                <div class="col-sm">
-                    <button class="astext">Internet of things</button>
-                </div>
-              </div>
-        </div>
+                
+            </header>
+          </div>
+          
         <script>
             if(window.screen.availWidth >= 1920){
               document.getElementsById("topBar").style.height = "100px";
