--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
           </div>
           
         <script>
-            if(window.screen.availWidth >= 1920){
-              document.getElementsById("topBar").style.height = "100px";
-            }
+            EEEEEE
         </script>
     </body>
 </html>
