--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
           </div>
           
         <script>
-            EEEEEEz
+            var material = [1, 0, 2, 3]
+            material.map((material) => {
+                return material.length;
+            }
+            )
         </script>
     </body>
 </html>
