--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>test</h1>
       </div> 
         <script>
+          console.log("XXX");
           let lastKnownScrollPosition = 0;
           let ticking = false;
 
